--- a/one_on_ones/weather-site/index.html
+++ b/one_on_ones/weather-site/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
-    <title></title>
+    <title>Week 1 Eval</title>
   </head>
   <body>
 
@@ -11,16 +11,21 @@
 
     <div class="location">
       <div class="text_box">
-        <form>
-          <label>City:</label><input type="text" placeholder="Miami,FL" class="text">
-          <input type="submit" value="Submit">
+        <form action="#" method+"post">
+          <label for="city">City:</label>
+          <input type="text" name=city" placeholder="Miami,FL" class="text" />
+          <input type="submit" value="Submit" />
         </form>
       </div>
     </div>
 
-    <div class="weather_description"><p>Partly sunny with a chance of rain</p></div>
+    <div class="weather_description">
+      <p>Partly sunny with a chance of rain</p>
+    </div>
 
-    <div class="temp"><h1>88°</h1></div>
+    <div class="temp">
+      <h1>88 &deg;</h1>
+    </div>
 
   </body>
 </html>
