update week 1 eval

--- a/one_on_ones/weather-site/index.html
+++ b/one_on_ones/weather-site/index.html
@@ -5,27 +5,23 @@
     <link rel="stylesheet" href="styles.css">
     <title>Week 1 Eval</title>
   </head>
-  <body>
-
-    <div class="date"><h1>January 28, 2019</div>
-
+  <body id="sunny">
+  <div class="date"><h1>January 28, 2019</h1>
     <div class="location">
       <div class="text_box">
-        <form action="#" method+"post">
-          <label for="city">City:</label>
-          <input type="text" name=city" placeholder="Miami,FL" class="text" />
+        <form action="#" method="post">
+          <label>City:</label>
+          <input type="text" name="city" placeholder="Miami,FL" class="text" />
           <input type="submit" value="Submit" />
         </form>
       </div>
     </div>
-
+    </div>
     <div class="weather_description">
       <p>Partly sunny with a chance of rain</p>
     </div>
-
     <div class="temp">
       <h1>88 &deg;</h1>
     </div>
-
   </body>
 </html>
